--- a/.tmux.conf
+++ b/.tmux.conf
@@ -336,6 +336,7 @@ set -g @plugin 'tmux-plugins/tmux-online-status'
 set -g @plugin 'tmux-plugins/tmux-sidebar'
 set -g @plugin 'tmux-plugins/tmux-copycat'
 set -g @plugin 'tmux-plugins/tmux-open'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'samoshkin/tmux-plugin-sysstat'
 
 # Plugin properties
