--- a/.config/yadm/Brewfile
+++ b/.config/yadm/Brewfile
@@ -49,6 +49,7 @@ cask "android-file-transfer"
 cask "anydesk"
 cask "dbeaver-community"
 cask "font-hack-nerd-font"
+cask "iina"
 cask "joplin"
 cask "mpv"
 cask "openvpn-connect"
