--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "tmux-config"]
 	path = tmux-config
 	url = https://github.com/samoshkin/tmux-config
+[submodule "/Users/ashutosh/.config/nvim"]
+	path = /Users/ashutosh/.config/nvim
+	url = https://github.com/NvChad/NvChad
