--- a/.tmux.conf
+++ b/.tmux.conf
@@ -143,7 +143,7 @@ set -g visual-activity on
 # ================================================
 # ===     Copy mode, scroll and clipboard      ===
 # ================================================
-set -g @copy_use_osc52_fallback on
+set -g @copy_use_osc52_fallback off
 
 # Prefer vi style key table
 setw -g mode-keys vi
@@ -194,6 +194,8 @@ bind -T copy-mode-vi MouseDown1Pane select-pane \;\
     
 # iTerm2 works with clipboard out of the box, set-clipboard already set to "external"
 # tmux show-options -g -s set-clipboard
+set-option -s set-clipboard off
+bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "xclip -selection clipboard -i"
 # set-clipboard on|external
 
 # =====================================
