--- a/.config/i3/config
+++ b/.config/i3/config
@@ -177,7 +177,7 @@ bindsym $mod+minus scratchpad show
 ######################################
 
 # start a terminal
-bindsym $mod+Return exec xfce4-terminal
+bindsym $mod+Return exec alacritty
 
 # kill focused window
 bindsym $mod+q kill
