--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,6 +3,8 @@
 # ==========================
 
 set -g default-terminal "screen-256color"
+set -g default-terminal "$TERM"
+set -ag terminal-overrides ",$TERM:Tc"
 set -g history-limit 20000
 set -g buffer-limit 20
 set -sg escape-time 0
