--- a/.config/i3/config
+++ b/.config/i3/config
@@ -508,6 +508,10 @@ client.urgent		    	$urgentred	$urgentred	$white		$yellowbrown	$yellowbrown
 bar {
 		font pango: MesloLGS NF Regular 11
 		status_command i3blocks -c ~/.config/i3/i3blocks.conf
+        status_command ~/.config/i3/bumblebee-status/bumblebee-status -m nic disk:root cpu \
+		memory battery date time pasink pasource \
+		-p root.path=/ time.format="%H:%M CW %V" date.format="%a, %b %d %Y" \
+		-t solarized-powerline
 	    	position bottom
 #	    	i3bar_command i3bar --transparency
 # it could be that you have no primary display set: set one (xrandr --output <output> --primary)
