--- a/.tmux.conf
+++ b/.tmux.conf
@@ -104,6 +104,7 @@ bind \\ if '[ #{pane_index} -eq 1 ]' \
 bind x kill-pane
 bind X kill-window
 bind C-x confirm-before -p "kill other windows? (y/n)" "kill-window -a"
+bind C-y setw synchronize-panes on
 bind Q confirm-before -p "kill-session #S? (y/n)" kill-session
 
 # Merge session with another one (e.g. move all windows)
